syntax = "proto3";
option go_package = "grpc/";

message Response {
  string ip = 1;
  string continent = 2;
  string country = 3;
  string state_prov = 4;
  string city = 5;
  double latitude = 6;
  double longitude = 7;
}

message Ip {
  string ip = 1;
}

service IpInfo {
  rpc GetIpInfo(Ip) returns (Response) {}
}